--- a/react-project/src/styles/sakura.css
+++ b/react-project/src/styles/sakura.css
@@ -9,7 +9,7 @@
   width: 100vw;
   height: 100vh;
   pointer-events: none;
-  z-index: 0;
+  z-index: 1;
   overflow: hidden;
 }
 
